==============
lxml changelog
==============

Under Development
=================

Features added
--------------

* Extended type annotation in objectify: cleaner annotation namespace setup
  plus new ``xsiannotate()`` and ``deannotate()`` functions

* Support for custom Element class instantiation in lxml.sax

* '.' represents empty ObjectPath (identity)

* EXSLT RegExp support in standard XPath (not only XSLT)

* ``lxml.pyclasslookup`` module that can access the entire tree in read-only
  mode to help determining a suitable Element class

* ``Element.values()`` to accompany the existing ``.keys()`` and ``.items()``

* ``collectAttributes()`` C-function to build a list of attribute
  keys/values/items for a libxml2 node

Bugs fixed
----------

* Thread safety in XPath evaluators

* Raise AssertionError when passing strings containing '\0' bytes

Other changes
-------------

* major refactoring in XPath/XSLT extension function code


1.3beta (2007-02-27)
====================

Features added
--------------

* ``DTD`` validator class (like ``RelaxNG`` and ``XMLSchema``)

* HTML generator helpers by Fredrik Lundh in ``lxml.htmlbuilder``

* ``ElementMaker`` XML generator by Fredrik Lundh in ``lxml.builder.E``

* Support for pickeling ``objectify.ObjectifiedElement`` objects to XML

* ``update()`` method on Element.attrib

* Optimised replacement for libxml2's _xmlReconsiliateNs(). This allows lxml
  a better handling of namespaces when moving elements between documents.

Bugs fixed
----------

* Possible memory leaks in namespace handling when moving elements between
  documents

Other changes
-------------

* major restructuring in the documentation


1.2.1 (2007-02-27)
==================

Bugs fixed
----------

* Build fixes for MS compiler

* Item assignments to special names like ``element["text"]`` failed

* Renamed ObjectifiedDataElement.__setText() to _setText() to make it easier
  to access

* The pattern for attribute names in ObjectPath was too restrictive

